Bug 633400 - Vertically align geolocation "Learn More..." link with menubutton. r=dao
UltraBlame original commit: 32b826fadf945c594f2343059c8e49bdd30a9aab

--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -9711,29 +9711,6 @@ png
 )
 ;
 }
-.
-geolocation
--
-text
--
-link
-{
--
-moz
--
-padding
--
-start
-:
-13px
-;
-padding
--
-top
-:
-10px
-;
-}
 #
 addons
 -
