--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -15879,20 +15879,6 @@ png
 ;
 }
 .
-geolocation
--
-text
--
-link
-{
-margin
--
-top
-:
-17px
-;
-}
-.
 popup
 -
 notification
