--- a/toolkit/themes/gnomestripe/global/notification.css
+++ b/toolkit/themes/gnomestripe/global/notification.css
@@ -358,6 +358,22 @@ popup
 -
 notification
 -
+button
+-
+container
+{
+margin
+-
+top
+:
+17px
+;
+}
+.
+popup
+-
+notification
+-
 closeitem
 {
 list
