--- a/toolkit/themes/pinstripe/global/notification.css
+++ b/toolkit/themes/pinstripe/global/notification.css
@@ -629,6 +629,22 @@ popup
 -
 notification
 -
+button
+-
+container
+{
+margin
+-
+top
+:
+17px
+;
+}
+.
+popup
+-
+notification
+-
 menubutton
 {
 -
@@ -637,12 +653,6 @@ moz
 appearance
 :
 none
-;
-margin
--
-top
-:
-17px
 ;
 }
 .
